# purplenest-backend-test

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
carts/: models.py  tests.py
carts/migrations/: 0001_initial.py  0002_cartitem_user.py
config/: settings.py  tests.py
orders/: models.py  tests.py
orders/migrations/: 0001_initial.py  0002_order_user.py
products/: models.py
products/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
